--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -21,7 +21,9 @@
 \def\Y{{\mathcal Y}}
 \def\RL{{r}}
 \def\N{{\mathcal N}}
-\def\Prefix{{p}}
+\def\Prefix{{r_p}}
+\def\Prefixp{{r'_p}}
+\def\Reg{{\lambda}}
 \def\RuleSet{{\mathcal S}}
 \newcommand{\x}{\mathbf{x}}
 \newcommand{\y}{\mathbf{y}}
