--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -22,8 +22,9 @@
 \def\RL{{r}}
 \def\N{{\mathcal N}}
 \def\Prefix{{r_p}}
-\def\Prefixp{{r'_p}}
+\def\PrefixP{{r'_p}}
 \def\Reg{{\lambda}}
+\def\MaxLength{{K_{\text{max}}}}
 \def\RuleSet{{\mathcal S}}
 \newcommand{\x}{\mathbf{x}}
 \newcommand{\y}{\mathbf{y}}
