--- a/paper/content.tex
+++ b/paper/content.tex
@@ -114,8 +114,8 @@ Our objective has structure amenable to global optimization via a branch-and-bou
 %
 %First, define~${p_k(x_n) = 1}$ if antecedent~$p_k$ captures~$x_n$, and 0 otherwise;
 First, define~${p_k(x_n \given p) = 1}$ if antecedent~$p_k$ captures datum~$x_n$
-in the context of prefix~$p$, and 0 otherwise;
-define~${p(x_n) = 1}$ if prefix~$p$ captures~$x_n$, and 0 otherwise.
+in the context of prefix~$p$, and~0 otherwise;
+define~${p(x_n) = 1}$ if prefix~$p$ captures~$x_n$, and~0 otherwise.
 %
 We can decompose the misclassification error into two contributions
 corresponding to the prefix and default:
